# WYMusic

./: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  Setting.vue  html.d.ts  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  menu.rs  mp3_tools.rs  plugins.rs  tools.rs  tray.rs
src/ManPanel/: Control.vue  LyricPanel.vue  TitleHeader.vue  VisualizationAudio.vue  index.vue
src/SongListPanel/: MenuAbility.vue  Song.vue  SongList.vue  index.vue  useMenuContext.ts
src/api/: local_songs.ts  songs.ts  user.ts
src/indexedDb/: dexieTools.ts  fileListDB.ts
src/store/: index.ts
src/store/module/: setting.ts  song.ts  user.ts
src/tools/: AudioTool.ts  api_local_songs.ts  api_songs.ts  appMenu.ts  appTray.ts  index.ts  initTask.ts  request.ts  useNaive.ts
src/workers/: fetch-worker.ts  image-pixel-color.worker.ts
