[package]
name = "wy-music"
version = "0.4.0"
description = "A Music App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
id3 = "1.16.3"
tauri = { version = "2.8.4", features = [ "protocol-asset", "devtools"] }
tauri-plugin-dialog = "2.3.3"
tauri-plugin-opener = "2.5.0"
tauri-plugin-fs = "2.4.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
reqwest = "0.12.23"
dirs = "6.0.0"
mp3-metadata = "0.4.0"
tauri-plugin-persisted-scope = "2.3.2"
base64 = "0.22.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.3.3"
